--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         {% block content %}
             <div class="container">
                 {% block page_content %}{% endblock %}
+                {{ page_content }}
             </div>
         {% endblock %}
 
