better analysis design

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,11 @@
 <nav class="navbar" style="background-color: white;">
     <a class="navbar-brand" href="/">Counter</a>
     <a class="navbar-brand" href="/analysis">Index Analysis</a>
+    <a class="navbar-brand" href="/admin">Admin</a>
+    <a class="navbar-brand" href="/logentry">Log Entry</a>    
     <a class="navbar-brand" href="/db/test">Test DB Connectivity</a>
-    <a class="navbar-brand" href="/db/info">Test DB Info</a>
+    <a class="navbar-brand" href="/flushdb">Clear DB</a>
+    <a class="navbar-brand" href="/db/info">DB Info</a>
   </nav>
+
+  
