--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar" style="background-color: white;">
-    <a class="navbar-brand" href="/analysis">Index Analysis</a>
-    <a class="navbar-brand" href="/admin">Admin</a>
+    <a class="navbar-brand" href="/analysis">Summary Index Analysis</a>
+    <a class="navbar-brand" href="/field">Field Analysis</a>
+    <a class="navbar-brand" href="/loadfiles">Load Log Files</a>
     <a class="navbar-brand" href="/logentry">Log Entry</a>    
     <a class="navbar-brand" href="/executeCmd">Execute DB Command</a>
     <a class="navbar-brand" href="/db/info">DB Info</a>
